--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
     </head>
-    <body>
-        <div class="m-[20px] border-2 border-gray-300 rounded-lg p-[20px]">
+    <body class="h-screen w-screen m-0 w-0">
+        <div class="border-2 border-gray-300 rounded-lg p-[20px]">
             <label class="text-[30px] font-semibold" for="name">ชื่อ-นามสกุล (ชื่อที่ต้องการให้เรียก)</label>
             <span id="nameError"></span><br>
             <input class="text-[20px] px-2" type="text" id="name" name="name" placeholder="Firstname Surname"><br><br>
