--- a/Questionair.html
+++ b/Questionair.html
@@ -8,7 +8,7 @@
 
     </head>
     <body>
-        <form>
+        <form class="p-[20px] border-2 border-gray-300 rounded-lg">
             <div class="m-[10px]">
                 <label class="text-[25px] font-semibold" for="R1">1. ฉันชอบการใช้มือหรืออุปกรณ์ในการดูแลสิ่งมีชีวิต เช่น การจับสัตว์, จับเครื่องมือแพทย์</label><br>
                 <div class="mx-10">
