--- a/results.html
+++ b/results.html
@@ -3,9 +3,10 @@
     <head>
         <title>Assessment Results</title>
         <script src="jquery-3.7.1.min.js"></script>
-        <script type="text/javascript" src="results.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> 
         <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+        <script type="text/javascript" src="results.js"></script>
 
 
     </head>
